--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,16 @@
 {
-  "short_name": "React App",
+  "short_name": "Trivia",
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "./images/question_icon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "./images/question_icon.png",
       "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "1082x1236"
     }
   ],
   "start_url": ".",
